# HandTrackingVST

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  MPE_Mappings.md  README.md  design_specification.md  implementation_report.md  implementation_specification.md
hand_tracking_vst/: pyproject.toml
hand_tracking_vst/config/: user_config.json
hand_tracking_vst/src/: main.py
hand_tracking_vst/src/config/: config_manager.py
hand_tracking_vst/src/core/: event_manager.py  expression_engine.py  hand_tracker.py  midi_controller.py  zone_mapper.py
hand_tracking_vst/src/layouts/: base_layout.py  grid_layout.py
hand_tracking_vst/src/smoothing/: base_smoother.py  ema_smoother.py  kalman_smoother.py
hand_tracking_vst/tests/: test_config_manager.py  test_expression_engine.py  test_grid_layout.py  test_hand_tracker.py  test_midi_controller.py  test_zone_mapper.py
